--- a/compose.yaml
+++ b/compose.yaml
@@ -1,5 +1,19 @@
 services:
-  postgres:
+  task-management:
+    build:
+      context: .
+    environment:
+      NODE_ENV: production
+    env_file: '.env'
+    ports:
+      - 3001:3000
+    depends_on:
+      db:
+        condition: service_healthy
+    networks:
+      - api-network
+
+  db:
     image: postgres:17-alpine
     ports:
       - 5432:5432
@@ -7,3 +21,14 @@ services:
       POSTGRES_USER: postgres
       POSTGRES_DB: db
       POSTGRES_PASSWORD: 12345
+    healthcheck:
+      test: ['CMD-SHELL', 'pg_isready -U postgres -d db']
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 30s
+    networks:
+      - api-network
+
+networks:
+  api-network:
