--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "pg": "^8.16.3",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
+    "swagger-ui-express": "^5.0.1",
     "typeorm": "^0.3.26",
     "uuid": "^11.1.0"
   },
