--- a/compose.yaml
+++ b/compose.yaml
@@ -18,11 +18,15 @@ services:
     ports:
       - 5432:5432
     environment:
-      POSTGRES_USER: postgres
-      POSTGRES_DB: db
-      POSTGRES_PASSWORD: 12345
+      POSTGRES_USER: ${DB_USERNAME:-postgres}
+      POSTGRES_DB: ${DB_NAME:-taskmanagement}
+      POSTGRES_PASSWORD: ${DB_PASSWORD:-your-secure-password}
     healthcheck:
-      test: ['CMD-SHELL', 'pg_isready -U postgres -d db']
+      test:
+        [
+          'CMD-SHELL',
+          'pg_isready -U ${DB_USERNAME:-postgres} -d ${DB_NAME:-taskmanagement}',
+        ]
       interval: 30s
       timeout: 10s
       retries: 3
